# fundingpulse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml
contracts/: openapi.json
deploy/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  supervisord.conf
docs/: index.md  tracker.md
frontend/: .env.development  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.d.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: AppFrame.module.css  AppFrame.tsx  FilterPopover.tsx  OptionsFilter.tsx  PortfolioBanner.module.css  PortfolioBanner.tsx  SiteFooter.module.css  SiteFooter.tsx  ThemeToggle.module.css  ThemeToggle.tsx  TopNavigation.module.css  TopNavigation.tsx  filterControls.module.css
frontend/app/_generated/: api-types.ts
frontend/app/_lib/: api-contract.ts  api-runtime.ts  api.ts  formatFundingValue.ts
frontend/app/_theme/: ThemeProvider.tsx
frontend/app/asset-funding/: page.module.css  page.tsx
frontend/app/contract-analysis/: page.module.css  page.tsx
frontend/app/funding-arbitrage/: page.module.css  page.tsx
frontend/mocks/: assetFunding.ts  contractAnalysis.ts  fundingArbitrage.ts  handlers.ts
fundingpulse/: __init__.py  db.py  db_settings.py  time.py
fundingpulse/api/: AGENTS.md  README.md  db.py  main.py  settings.py
fundingpulse/api/dto/: __init__.py  base.py  enums.py  errors.py  funding_data.py  meta.py
fundingpulse/migrations/: __init__.py  config.py  env.py
fundingpulse/models/: AGENTS.md  __init__.py  asset.py  base.py  contract.py  contract_history_state.py  historical_funding_point.py  live_funding_point.py  quote.py  section.py
fundingpulse/settings/: __init__.py
fundingpulse/testing/: README.md  __init__.py  db.py  fixtures.py
fundingpulse/tracker/: AGENTS.md  README.md  bootstrap.py  cli.py  contracts.py  history.py  main.py  materialized_view_refresher.py  runtime.py  settings.py
scripts/: check_no_datetime_usage.py  export_openapi.py
tests/: conftest.py
tests/api/: conftest.py  test_app_lifespan.py  test_contract_meta.py  test_contract_search.py  test_db_smoke.py  test_funding_data_queries.py  test_funding_pairing_logic.py  test_funding_wall_queries.py
tests/tracker/: conftest.py  test_contract_registry.py  test_exchange_orchestrator.py  test_runtime_and_bootstrap.py
(+124 files in other folders)
