[project]
name = "fundingpulse"
version = "0.1.0"
description = "Crypto funding rate tracking platform"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
dependencies = [
    # Database & ORM
    "sqlmodel>=0.0.31",
    "sqlalchemy>=2.0.44",
    "alembic>=1.18.2",
    "alembic-postgresql-enum>=1.8.0",
    "psycopg[binary]>=3.3.2",
    "greenlet>=3.3.1",
    "sqlalchemy-timescaledb",
    # Settings
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    # Tracker: HTTP & scheduling
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "tenacity>=9.1.2",
    "apscheduler>=3.11.1",
    "rich>=14.2.0",
    # API: FastAPI
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
funding-tracker = "fundingpulse.tracker.main:main"
verify = "fundingpulse.tracker.tools.verify_exchange:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["fundingpulse"]

[tool.uv.sources]
sqlalchemy-timescaledb = { git = "https://github.com/NikitaPirate/sqlalchemy-timescaledb.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.10.0",
]
docs = [
    "mkdocs-material>=9.6",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 99
target-version = "py314"
exclude = ["fundingpulse/migrations"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "ANN", "Q", "T20", "N", "TID"]
ignore = ["ANN002", "ANN003"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"fundingpulse/api/queries/funding_data.py" = ["E501"]
"fundingpulse/api/queries/funding_sql_composer.py" = ["E501"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "Depends",
    "fastapi.Depends",
    "fastapi.params.Depends",
    "Query",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["fundingpulse"]
exclude = ["**/__pycache__", ".venv", "fundingpulse/migrations"]
typeCheckingMode = "basic"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
